spectec/test/elab/neg/parse-relation-body-must-be-notation.t
  $ ./main.exe parse-relation-body-must-be-notation.spectec 2>&1
  error: expected notation type
    --> parse-relation-body-must-be-notation.spectec:3:13
    |
  3 | relation R: nat
    |             ^^^
    = source: parse
  [1]
